<resources>
    <string name="app_name">Ciclo Vida - Intencoes</string>
    <string name="activity1">Activity 01</string>
    <string name="activity2">Activity 02</string>
    <string name="proximo">Próximo</string>
    <string name="anterior">Anterior</string>
    <string name="browser">Browser</string>
    <string name="fone">Fone</string>
    <string name="contatos">Contatos</string>
</resources>