<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity2" />

        <Button
            android:id="@+id/btnAnterior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anterior" />

        <Button
            android:id="@+id/btnBrowser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/browser" />

        <Button
            android:id="@+id/btnFone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fone" />

        <Button
            android:id="@+id/btnContatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contatos" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>